# personal-employee

./: .env.example  .gitignore  .gmail_seen_ids.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py  test_gmail.py
.github/workflows/: tests.yml
.specify/memory/: constitution.md
mcp_servers/email/: server.py
obsidian_vault/: Company_Handbook.md  Dashboard.md
obsidian_vault/Briefings/: 2026-02-26_Monday_Briefing.md
obsidian_vault/Done/: 20260116_004640_completed_20260115_192507_created_test_ai_employee_py.md  20260116_004640_completed_20260115_192536_modified_test_ai_employee_py.md  20260116_004640_completed_20260115_195727_created_ai_employee_py.md  20260116_004640_completed_20260115_195740_deleted_test_ai_employee_py.md  20260116_004640_completed_20260116_001806_modified_ai_employee_py.md  20260116_004640_completed_20260116_001817_modified_ai_employee_py.md  20260116_004640_completed_20260116_004334_modified_ai_employee_py.md  20260116_004640_completed_20260116_004355_modified_ai_employee_py.md  20260116_011547_completed_test_task.md  20260116_014614_completed_20260116_014038_modified_ai_employee_py.md  20260215_022359_completed_test_run_mode.md  _original_20260115_192507_created_test_ai_employee_py.md  _original_20260115_192536_modified_test_ai_employee_py.md  _original_20260115_195727_created_ai_employee_py.md  (+8 more)
scripts/: ai_watch.py  run_employee.py  watch.py
src/: ai_employee.py  health_monitor.py  retry.py  vault_sync.py  watchdog.py  weekly_briefing.py
tests/: __init__.py  conftest.py
watchers/: file_watcher.py  gmail_watcher.py
(+255 files in other folders)
